--- a/.github/workflows/main_zygomobile.yml
+++ b/.github/workflows/main_zygomobile.yml
@@ -68,4 +68,7 @@ jobs:
         with:
           app-name: 'zygomobile'
           slot-name: 'Production'
+          startup-command: 'python main.py'
+
+
           
